@@ -344,6 +344,22 @@ is_linked(list_link *head, list_link *entry)
   }
 
 
+/*
+ * returns 1 if the link points to something other than itself, 0 otherwise
+ * (links that have been cleared with the CLEAR_LINK macro will return 0)
+ *
+ */
+int is_link_initialized(
+    
+  list_link *head)
+
+  {
+  if ((head->ll_prior != head) ||
+      (head->ll_next  != head))
+    return(1);
+
+  return(0);
+  }
 
 
 /*
